# useful-phd-stuff

./: LICENSE  README.md  setup.cfg  setup.py
docs/: general-phd-tips.md  run-scripts-in-background.md  science-figures-matplotlib.md  working-on-a-remote-server.md
src/useful_phd/: __init__.py  filesys.py  plotting.py  utils.py  version.py
