[metadata]
name = useful-phd
version = attr: useful_phd.version.__version__
license = BSD
license_files = LICENSE
url = https://github.com/amarnane/useful-phd-stuff
author = Aidan Marnane
author_email = a.marnane@ed.ac.uk
keywords = helper functions python file manipulation matplotlib plotting
description = helper functions I find useful for creating experiment and saving figures
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: BSD
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    yaml
    matplotlib
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src

# # This option works but does have some issues. A better structure is to make use of Click and entrypoints.
# # See the section in the README for why it is not great.
# scripts =
#     scripts/logger
#     scripts/calc

# better choice as it allows your package to work on multiple platforms.
# [options.entry_points]
# console_scripts =
#     logexample = lab_pkg.logging_example:logger
   
[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths =
    tests

