[metadata]
name = useful-phd
version = attr: useful_phd.version.__version__
license = BSD
license_files = LICENSE
url = https://github.com/amarnane/useful-phd-stuff
author = Aidan Marnane
author_email = a.marnane@ed.ac.uk
keywords = helper functions python file manipulation matplotlib plotting
description = helper functions I find useful for creating experiment and saving figures
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: BSD
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    PyYaml
    matplotlib
package_dir =
    =src
packages = find:

[options.packages.find]
where = src


